Changed default font to "Liberation Sans".

--- a/templates/configuration.scss
+++ b/templates/configuration.scss
@@ -5,10 +5,9 @@
  */
 
 
-$font: "DejaVu Sans", "Liberation Sans", "OpenSans", sans-serif;
+$font: "Liberation Sans", "OpenSans", "DejaVu Sans", sans-serif;
 $font-size-screen: 11pt;
 $font-size-print: 10pt;
-
 
 $title-color: $ALUMINIUM_5;
 $title-font-size: 433%;
